# thesis-routing-2023

./: .gitignore  README.md  setup.bat  setup.sh
data/orderrouting_sides/: test_data.json
data/original/x100y100/: test_data.json  test_data_new.json
data/original/x20y20/: test_data.json  test_data_new.json
data/original/x30y30/: test_data.json  test_data_new.json
data/original/x40y40/: test_data.json  test_data_new.json
data/original/x50y50/: test_data.json  test_data_new.json
data/original/x60y60/: test_data.json  test_data_new.json
data/original/x70y70/: test_data.json  test_data_new.json
data/original/x80y80/: test_data.json  test_data_new.json
data/original/x90y90/: test_data.json  test_data_new.json
python/: analyse_order_results.py  analyse_results.py  config.toml  examples.py  requirements.txt  run_order_test.py  run_rust.py  testdata.py
python/src/: utils.py
python/src/analyser/: analyser.py
python/src/datacreator/: datacreator.py
python/src/plotter/: plotter.py
python/src/routing/: routing.py
python/testing/: compare_path_length.py  example_plot.py  logger.py  main3.py  plot2.py  run_experiment.py  test.py  timing.py
rust/nd-routing/: Cargo.toml
rust/nd-routing/src/: json_serializer.rs  main.rs  router.rs
rust/o-routing/: Cargo.toml
rust/o-routing/src/: main.rs  router.rs
rust/routing/: Cargo.toml
rust/routing/src/: json_serializer.rs  main.rs  router.rs
