[package]
name = "nd-routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
threadpool = "1.0"
crossbeam-channel = "0.5.6"
indicatif = "0.17.2"
# rayon = "1.7.0"
# indicatif = { version = "0.17.2", features = ["rayon"]}

# Personal use, modified serde_json
# [patch.crates-io]
# serde_json = {path = "../../serde_json-1.0.92"}

[profile.release]
debug = true