[package]
name = "routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
threadpool = "1.0"
crossbeam-channel = "0.5.6"
# polars = "0.27.2"
# polars = { version = "0.27.2", features = ["lazy", "csv-file", "strings", "temporal", "dtype-duration", "dtype-categorical", "concat_str", "list_eval", "rank", "lazy_regex"]}

# Personal use, modified serde_json
# [patch.crates-io]
# serde_json = {path = "../../serde_json-1.0.92"}
